# bmsos_bacnet

./: .env.example  .gitignore  README.md  fake_saas.py  pyproject.toml
.cursor/rules/: edge-agent-version-bump.mdc
deploy/: edge-agent.service  update-edge-agent.sh
docs/: edge_jobs_contract.md  saas_snapshot_ingest.md
src/edge_agent/: __init__.py  __main__.py  bacnet_client.py  holidays.py  iss_tracker.py  job_runner.py  json_safe.py  logging_setup.py  main.py  mock_bacnet_client.py  models.py  open_meteo.py  open_meteo_air_quality.py  saas_client.py  settings.py  site_time.py  storage.py  weather_decision_points.py  weather_derived.py
src/edge_agent/scripts/: update-edge-agent.sh
