[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-agent"
version = "0.1.6"
description = "BACnet/IP edge agent — polls SaaS, runs BACnet jobs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "bacpypes3>=0.0.104",
]

[project.optional-dependencies]
dev = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
edge_agent = ["scripts/update-edge-agent.sh"]
